fix: time gap decreased for video play button showing

--- a/src/frontend/scss/components/video-player.scss
+++ b/src/frontend/scss/components/video-player.scss
@@ -80,7 +80,7 @@
     display: grid !important;
 }
 .fadeout {
-    animation: fadeout 1s forwards;
+    animation: fadeout 0.7s forwards;
 }
 @keyframes fadeout {
     from {
